updated the mixins section for gradients but didn't complete process fixed issue with background cutting off at large screen sizes modified navigation header to shorten at large screen sizes

--- a/app/assets/stylesheets/layouts/_base-layout.sass
+++ b/app/assets/stylesheets/layouts/_base-layout.sass
@@ -2,11 +2,13 @@
 /*=========== Sticky Footer Styling  using Flexbox ==============*/
 
 body
-  background: $background-color
-  background-image: image-url("white_bed_sheet.png")
+  background: linear-gradient( rgba($white, 0.65), rgba($white, 0.65) ), url(asset-path("white_bed_sheet.png"))
   padding: 0
   +flexpoint-sm
     padding-top: $fixed-header-height
+  +flexpoint-lg
+    padding-top: ($fixed-header-height - 50px)
+
 
 .site
   +flexbox()
